compiler/example/test-utils/invalid-type-datamodel/go.mod
module github.com/vmware-tanzu/graph-framework-for-microservices/compiler/example/test-utils/invalid-type-datamodel

go 1.17

replace github.com/vmware-tanzu/graph-framework-for-microservices/common-library => ../../../../common-library

require github.com/vmware-tanzu/graph-framework-for-microservices/common-library v0.0.0-00010101000000-000000000000

require github.com/elliotchance/orderedmap v1.4.0 // indirect
